Fix appcache preventing reload on non iOS devices, fix About page button background on android

--- a/src/AboutView.css
+++ b/src/AboutView.css
@@ -5,6 +5,8 @@
 .AboutView button, .AboutView select {
   color: inherit;
   filter: invert(30%);
+  background: transparent;
+  -webkit-appearance: none;
 }
 
 .exportOptions {
