--- a/src/SettingsView.css
+++ b/src/SettingsView.css
@@ -36,6 +36,7 @@
   margin-left: 0;
   color: inherit;
   filter: invert(30%);
+  background: transparent;
 }
 
 .SettingsView em {
